[package]
name = "wthrs"
version = "0.1.0"
authors = ["Melvie <3878772+Melvie@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
tokio = "0.2.22"
dirs = "3.0"
dotenv = "0.15"