[package]
name = "wthrs"
version = "0.1.0"
authors = ["Melvie <3878772+Melvie@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
tokio = {version = "0.2.22", features = ["macros"]}
anyhow = "1.0.32"
confy = "0.4.0"
serde = {version = "1.0",  features = ["derive"]}
reqwest = {version = "0.10.8", features = ["json"]}